tests/error/gack_decl.gw
// [skip] cannot use <<< >>> on variable declarations
 <<< int i >>>;
